--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10491,6 +10491,10 @@ a.text-dark:focus {
   }
 }
 
+.pagination {
+  justify-content: center;
+}
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
