--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -25,3 +25,8 @@ color: black;
     text-align: right;
     padding-right: 5% !important;
 }
+
+.avatar{
+    max-height: 326px;
+    max-width: 326px;
+}
