--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10520,6 +10520,11 @@ a.text-dark:focus {
   padding-right: 5% !important;
 }
 
+.avatar {
+  max-height: 326px;
+  max-width: 326px;
+}
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
