--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10525,6 +10525,29 @@ a.text-dark:focus {
   max-width: 326px;
 }
 
+.new-article {
+  margin: 10px 10px 10px 10px;
+}
+
+.title-article {
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.article {
+  text-align: center;
+}
+
+.input-tag-category {
+  width: auto;
+  text-align: center;
+  margin: 10px 10px 10px 10px;
+}
+
+.hidden {
+  display: none;
+}
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
