--- a/public/grafika/css/blog-post.sass
+++ b/public/grafika/css/blog-post.sass
@@ -153,11 +153,11 @@ html
           height: 7rem
           border-radius: 20px
           background-color: $dark-blue
-          //Insert image here -->
-          //background-image: url("")
-          //background-postion: center
-          //background-size: cover
-          //background-repeat: no-repeat
+          Insert image here -->
+          background-image: url("users/1/1.jpg")
+          background-postion: center
+          background-size: cover
+          background-repeat: no-repeat
 
         .date
           font-size: 0.65rem
